--- a/ticker.html
+++ b/ticker.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
-
+<link rel="stylesheet" href="ticker.css">
 </head>
 <body>
+
 
 <br>
 
@@ -24,7 +24,7 @@
 
   <div class="column">Global carbon emissions<br>since the mid-1800s<br>
  <div id="current-carbon-emissions">
-     +<span>----------------</span>°F
+     +<span>----------------</span>Â°F
 
 </div>
 </div>
